[package]
name = "cuda-resource"
version = "0.1.0"
edition = "2021"
description = "Priority-based resource pools with preemption"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-resource"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

